Update/docker configuration (#3)
* update: docker configuration

- update docker to multistage docker

Signed-off-by: kapilh <146179927+kapilhadoltikar@users.noreply.github.com>

* feature: maven containerization plugin

- add maven plugin for containerization.
- remove dockerfile for microservices.
- now podman in recommended.

Signed-off-by: kapilh <146179927+kapilhadoltikar@users.noreply.github.com>

---------

Signed-off-by: kapilh <146179927+kapilhadoltikar@users.noreply.github.com>